refactored hero cta.

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -40,7 +40,7 @@
 
         <div class="social">
           <h3>Social Media</h3>
-          <%= link_to icon('facebook-official', nil, class:'fa-3x m-r-md'), @facebok_url, target:'_blank' %>
+          <%= link_to icon('facebook-official', nil, class:'fa-3x m-r-md'), @facebook_url, target:'_blank' %>
           <%= link_to icon('twitter', nil, class:'fa-3x m-r-md'), @twitter_url, target:'_blank' %>
           <%= link_to icon('pinterest', nil, class:'fa-3x'), @pinterest_url, target:'_blank' %>
         </div>
@@ -52,4 +52,3 @@
   </div>
 </section>
 
-<!-- TODO:  add form validation to contact form. -->
