--- a/app/views/landing_pages/student.html.erb
+++ b/app/views/landing_pages/student.html.erb
@@ -1,6 +1,6 @@
 <section id="hero">
 
-  <%= render partial: 'shared/hero', locals: { heading: @heading, sub_heading: @sub_heading } %>
+  <%= render 'shared/hero' %>
 
 </section>
 
