--- a/app/views/shared/_hero.erb
+++ b/app/views/shared/_hero.erb
@@ -5,7 +5,9 @@
     </h1>
 
     <div class="cta animated fadeInDown">
-        <%= link_to 'Request a brochure', new_lead_path, class:'button-outline' %>
+
+      <%= render_hero_cta %>
+
     </div>
 
   <%= content_tag :figure, nil, class:'img' %>
