--- a/app/views/shared/_reasons.erb
+++ b/app/views/shared/_reasons.erb
@@ -11,7 +11,7 @@
   <div class="row">
     <div class="embed-responsive embed-responsive-16by9">
 
-      <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/iO1x38-PJtM?rel=0&amp;controls=0&amp;showinfo=0"allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/TT8mqqlsyiE" frameborder="0" allowfullscreen></iframe>
 
     </div>
   </div>
