added events scope

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -35,6 +35,7 @@
 @import 'partials/pages/aboutus';
 @import 'partials/pages/features';
 @import 'partials/pages/blogpost';
+@import 'partials/pages/portfolio';
 @import 'partials/pages/gallery';
 @import 'partials/pages/contactus';
 @import 'partials/pages/signup';
