--- a/app/views/shared/_reasons.erb
+++ b/app/views/shared/_reasons.erb
@@ -11,7 +11,7 @@
   <div class="row">
     <div class="embed-responsive embed-responsive-16by9">
 
-      <iframe src="https://www.youtube.com/watch?v=mWLgqnKunEw&feature=youtu.be" frameborder="0" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/mWLgqnKunEw" frameborder="0" allowfullscreen></iframe>
 
     </div>
   </div>
