--- a/app/views/shared/_hero.erb
+++ b/app/views/shared/_hero.erb
@@ -1,7 +1,7 @@
 <div class="container">
 
     <h1 class="hero-text animated fadeInDown">
-      Spend your first 16-months<br /> of college with us
+      Spend your first 16 months<br /> of college with us
     </h1>
 
     <div class="cta animated fadeInDown">
