changed JP's title.

--- a/app/views/site_pages/about.html.erb
+++ b/app/views/site_pages/about.html.erb
@@ -133,7 +133,7 @@
 
       <figure class="col-md-12 team-row">
         <%= image_tag 'staff/poarch_jason-229x300.jpg', alt:'Jason Poarch photo',
-                      data: { toggle:'tooltip', placement:'top', title: 'Jason Poarch - Recruiting Coordinator | Faculty' } %>
+                      data: { toggle:'tooltip', placement:'top', title: 'Jason Poarch - Director of Business Development & Partner Relations | Faculty' } %>
         <%= image_tag 'staff/reid_david-229x300.jpg', alt:'Dave Reid photo',
                       data: { toggle:'tooltip', placement:'top', title: 'Dave Reid - Faculty' } %>
         <%= image_tag 'staff/petree_alex-229x300.jpg', alt:'Alexandra Tousley photo',
