--- a/app/views/events/_event.erb
+++ b/app/views/events/_event.erb
@@ -6,6 +6,7 @@
 
     <figure class="col-md-6 screen">
       <%= cl_image_tag event.photo, class:'img-responsive', alt: "#{event.speaker} photo" %>
+      <%= content_tag :figcaption, event.speaker, class:'m-t-sm' %>
     </figure>
 
     <div class="col-md-6 info">
