--- a/app/views/site_pages/_deadlines_pane.erb
+++ b/app/views/site_pages/_deadlines_pane.erb
@@ -21,4 +21,16 @@
     </li>
   </ul>
 
+  <h4>Academic Calendar</h4>
+
+  <figure>
+
+    <%= link_to cl_image_tag('2015_academic_calendar.pdf', width:200, height:250, crop: :fill),
+                'http://res.cloudinary.com/hm4cykqp2/image/upload/v1433373093/2015_academic_calendar.pdf',
+                target:'_blank' %>
+
+    <figcaption class="m-t-md text-uc text-xs text-muted">Click the image above to download our 2015 Academic Calendar.</figcaption>
+
+  </figure>
+
 </div>
