--- a/app/views/site_pages/admissions.html.erb
+++ b/app/views/site_pages/admissions.html.erb
@@ -14,7 +14,7 @@
           <%= content_tag :li, link_to('Tuition & Fees', '#tuition', data: { toggle:'tab' }), class:'active' %>
           <%= content_tag :li, link_to('Financial Aid', '#fin-aid', data: { toggle:'tab' }) %>
           <%= content_tag :li, link_to('Credit Transfers', '#credits', data: { toggle:'tab' }) %>
-          <%= content_tag :li, link_to('Deadlines', '#deadlines', data: { toggle:'tab' }) %>
+          <%= content_tag :li, link_to('Dates & Deadlines', '#deadlines', data: { toggle:'tab' }) %>
         </ul>
 
         <div class="tab-content">
