--- a/app/views/layouts/_head.erb
+++ b/app/views/layouts/_head.erb
@@ -12,6 +12,8 @@
 
 <title><%= title %></title>
 
+<%= favicon_link_tag %>
+
 <%= stylesheet_link_tag    'application', params[:controller], media: 'all', 'data-turbolinks-track' => true %>
 
 <%= javascript_include_tag 'application', params[:controller], 'data-turbolinks-track' => true %>
