academics nav specs pass

--- a/app/views/site_pages/academics.html.erb
+++ b/app/views/site_pages/academics.html.erb
@@ -131,7 +131,7 @@
               <%= content_tag :p, academics_read_more_link('socratically') %>
             </div>
             <figure class="col-md-6 image">
-              <%= image_tag 'socratically.jpg', width:'359', class:'img-responsive img-rounded', class:'socratic discussion image' %>
+              <%= image_tag 'socratically.jpg', width:'359', class:'img-responsive img-rounded', alt:'socratic discussion image' %>
             </figure>
           </div>
 
