--- a/app/views/site_pages/_credits_pane.erb
+++ b/app/views/site_pages/_credits_pane.erb
@@ -3,7 +3,7 @@
   <h4>Transferring credits to San Diego Christian</h4>
 
   <p>
-    Because the Rivendell program is so unique, and because our Sequenced Modular Education™ is a
+    Because the Rivendell program is so unique, and because our Sequenced Modular Curriculum™ is a
     standalone curriculum, we cannot apply academic credits completed at other colleges or universities toward
     our Associate of Arts degree program in Minnesota. Since we offer one continuous 16-month program, students can neither join
     a program midway nor opt out of a class because they have completed similar coursework elsewhere. However,
