--- a/app/views/site_pages/_life_skills.erb
+++ b/app/views/site_pages/_life_skills.erb
@@ -1,5 +1,5 @@
 <p>
-  A recent study conducted by Stanford Research Institute, Harvard University and the Carnegie Foundation discovered:
+  A study conducted by Stanford Research Institute, Harvard University and the Carnegie Foundation discovered:
 </p>
 
 <blockquote>
