--- a/app/views/site_pages/_tuition_pane.erb
+++ b/app/views/site_pages/_tuition_pane.erb
@@ -1,6 +1,6 @@
 <div class="col-md-12 info">
 
-  <h4>All-inclusive college experience:</h4>
+  <h4>All-inclusive package:</h4>
 
   <p>
     San Diego Christian’s Rivendell program on our Minnesota campus is an “all-inclusive” college experience.  There are four total
