--- a/app/views/site_pages/christianly.html.erb
+++ b/app/views/site_pages/christianly.html.erb
@@ -27,7 +27,7 @@
           <p>
             Proverbs is clear that the beginning of both ‘wisdom’ and ‘knowledge’ is “the fear of the Lord”
             (cf. Pr. 1:7; 9:10).  This is so, from the biblical perspective, because it’s assumed that a
-            right posture before (and ‘picture’ of) the Creator is essential to a right perception of his
+            right posture before (and ‘picture’ of) the Creator is essential to a right perception of His
             creation.  As such, a pedagogy sharing that perspective will naturally manifest itself in its
             approach to teaching the liberal arts:
           </p>
