--- a/app/views/site_pages/student_life.html.erb
+++ b/app/views/site_pages/student_life.html.erb
@@ -85,8 +85,8 @@
           symphony or play.
         </p>
         <p>
-          Past cultural events include:  <em>Camelot</em>, <em>Once</em>,
-          <em>Beauty and the Beast</em>, and <em>Mid Summer Night's Dream</em>
+          Past cultural events include:  <em>Camelot</em>, <em>Les Miserables</em>,
+          <em>Phantom of the Opera</em>, and <em>Mid Summer Night's Dream</em>
         </p>
       </div>
       <figure class="col-md-6 image">
@@ -115,7 +115,7 @@
         <h4>Enjoy the amenities of SDC's Minnesota Campus.</h4>
         <p>
           Our campus gymnasium features basketball, volleyball, and racquetball courts, as well as a weight room with both free weights and nautilus equipment.
-          It is complete with men’s and women’s locker rooms, showers, and even a kitchen.
+          It is complete with men’s and women’s locker rooms and showers.
           The gym provides students with a great place to exercise, especially when the winter weather arrives.
         </p>
       </div>
