--- a/app/views/site_pages/sequentially.html.erb
+++ b/app/views/site_pages/sequentially.html.erb
@@ -13,6 +13,9 @@
         <div class="title">
           Progress through the college core <strong><em>Sequentially</em></strong>
         </div>
+        <div class="author">
+          Study one subject at a time with Rivendell's Sequenced Modular Curriclum<sup><small>TM</small></sup>.
+        </div>
 
         <div class="content">
 
