--- a/app/views/contacts/_form.erb
+++ b/app/views/contacts/_form.erb
@@ -2,7 +2,7 @@
 
     <div class="form-group">
       <%= f.label :name, 'Your name' %>
-      <%= f.text_field :name, class:'form-control' %>
+      <%= f.text_field :name, class:'form-control', autofocus:true %>
     </div>
 
     <div class="form-group">
