--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,11 +1,6 @@
 <section id="map" style="height:400px;">
 
-  <iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com.mx/?ie=UTF8&amp;ll=44.796631,-93.370818&amp;spn=0.023259,0.038495&amp;t=m&amp;z=15&amp;output=embed"></iframe>
-
-  <div class="marker-wrapper">
-    <%= content_tag :div, nil, class:'marker-icon' %>
-    <%= content_tag :div, nil, class:'marker' %>
-  </div>
+  <%= render 'shared/contact_map' %>
 
 </section>
 
@@ -22,28 +17,7 @@
 
       <aside class="col-md-4 contact">
 
-        <div class="address">
-          <h3>Our address</h3>
-          <p>
-            San Diego Christian College<br />
-            Rivendell Program<br />
-            6820 Auto Club Road, Suite T<br />
-            Bloomington, MN  55438<br />
-            USA
-          </p>
-        </div>
-
-        <div class="phone">
-          <h3>By phone</h3>
-          <p>1-952-996-1451</p>
-        </div>
-
-        <div class="social">
-          <h3>Social Media</h3>
-          <%= link_to icon('facebook-official', nil, class:'fa-3x m-r-md'), @facebook_url, target:'_blank' %>
-          <%= link_to icon('twitter', nil, class:'fa-3x m-r-md'), @twitter_url, target:'_blank' %>
-          <%= link_to icon('pinterest', nil, class:'fa-3x'), @pinterest_url, target:'_blank' %>
-        </div>
+       <%= render 'shared/contact_sidebar' %>
 
       </aside>
 
