--- a/app/views/visits/new.html.erb
+++ b/app/views/visits/new.html.erb
@@ -1,2 +1,32 @@
-<h1>Visits#new</h1>
-<p>Find me in app/views/visits/new.html.erb</p>
+<section id="map" style="height:400px;">
+
+  <%= render 'shared/contact_map' %>
+
+</section>
+
+<section id="info">
+  <div class="container">
+
+    <div class="row">
+      <div class="col-md-7 message">
+
+        <h3>We're so confident you'll enroll with us, we'll pay for your visit!</h3>
+
+        <p>
+          We are pleased you have chosen to visit our campus.  <strong>Over 70% of our visitors enroll in our program.</strong>
+          Complete the form below to get a taste of what our groundbreaking college-core program is all about.
+        </p>
+
+        <%= render 'form' %>
+      </div>
+
+      <aside class="col-md-4 col-md-offset-1 contact">
+
+        <%= render 'shared/contact_sidebar' %>
+
+      </aside>
+
+    </div>
+
+  </div>
+</section>
