all visit view files complete.  all specs pass.

--- a/app/views/shared/_contact_sidebar.erb
+++ b/app/views/shared/_contact_sidebar.erb
@@ -1,5 +1,5 @@
 <div class="address">
-  <h3>Our address</h3>
+  <h3>Our address:</h3>
   <p>
     San Diego Christian College<br />
     Rivendell Program<br />
@@ -10,12 +10,12 @@
 </div>
 
 <div class="phone">
-  <h3>By phone</h3>
+  <h3>By phone:</h3>
   <p>1-952-996-1451</p>
 </div>
 
 <div class="social">
-  <h3>Social Media</h3>
+  <h3>Social media:</h3>
   <%= link_to icon('facebook-official', nil, class:'fa-3x m-r-md'), @facebook_url, target:'_blank' %>
   <%= link_to icon('twitter', nil, class:'fa-3x m-r-md'), @twitter_url, target:'_blank' %>
   <%= link_to icon('pinterest', nil, class:'fa-3x'), @pinterest_url, target:'_blank' %>
