--- a/app/views/visits/new.html.erb
+++ b/app/views/visits/new.html.erb
@@ -10,7 +10,7 @@
     <div class="row">
       <div class="col-md-7 message">
 
-        <h3>We're so confident you'll enroll with us, we'll pay for your visit!</h3>
+        <h3>We're so confident you'll enroll with us, we'll fly you here for free!</h3>
 
         <p>
           We are pleased you have chosen to visit our campus.  <strong>Over 70% of our visitors enroll in our program.</strong>
