--- a/app/views/visits/_form.erb
+++ b/app/views/visits/_form.erb
@@ -32,12 +32,14 @@
 
     <div class="form-group">
       <%= f.label :student_dob, 'Student date-of-birth' %>
-      <%= f.date_select :student_dob, class:'form-control', order: [:month, :day, :year] %>
+      <%= f.date_select :student_dob, class:'form-control', order: [:month, :day, :year],
+                        start_year: Date.today.year-25, end_year: Date.today.year-10 %>
     </div>
 
     <div class="form-group">
       <%= f.label :parent_dob, 'Parent date-of-birth' %>
-      <%= f.date_select :parent_dob, class:'form-control', order: [:month, :day, :year] %>
+      <%= f.date_select :parent_dob, class:'form-control', order: [:month, :day, :year],
+                        start_year: Date.today.year-60, end_year: Date.today.year-10 %>
     </div>
 
     <div class="form-group">
@@ -46,7 +48,7 @@
     </div>
 
     <div class="form-group">
-      <%= f.label :travel_times, 'Preferred travel dates' %>
+      <%= f.label :travel_times, 'Preferred travel times' %>
       <%= f.text_area :travel_times, class:'form-control' %>
     </div>
 
