added shared visit CTA.  changed CTAs on about and student life pages.

--- a/app/views/site_pages/about.html.erb
+++ b/app/views/site_pages/about.html.erb
@@ -152,16 +152,10 @@
 <section id="cta">
   <div class="container">
 
-    <div class="row">
-      <div class="col-md-12">
-        <div class="wrapper clearfix">
-          <h4>Learn more about the Rivendell Program and our Minnesota campus:</h4>
-          <%= link_to 'Request a brochure', new_lead_path, class:'button button-small' %>
-        </div>
-      </div>
-    </div>
+    <%= render 'shared/visit_cta' %>
 
   </div>
+
 </section>
 
 <section id="accreditation">
