--- a/app/views/site_pages/student_life.html.erb
+++ b/app/views/site_pages/student_life.html.erb
@@ -130,7 +130,7 @@
 <section id="cta">
   <div class="container">
 
-    <%= render 'shared/apply_cta' %>
+    <%= render 'shared/visit_cta' %>
 
   </div>
 </section>
