added client side validation to visit request form.

--- a/app/views/site_pages/_finaid_pane.erb
+++ b/app/views/site_pages/_finaid_pane.erb
@@ -80,14 +80,21 @@
 
   <div class="row">
 
-    <h4>Additional Resources</h4>
+    <div class="col-md-8 info">
 
-    <ul>
-      <%= content_tag :li, link_to('www.collegeanswer.com', 'https://www.salliemae.com/plan-for-college/', target:'_blank') %>
-      <%= content_tag :li, link_to('www.fastweb.com', 'http://www.fastweb.com', target:'_blank') %>
-      <%= content_tag :li, link_to('www.finaid.org', 'http://www.finaid.org', target:'_blank') %>
-      <%= content_tag :li, link_to('www.collegeanswer.com', 'https://studentaid.ed.gov/sa/', target:'_blank') %>
-    </ul>
+
+    </div>
+
+    <div class="col-md-4 info">
+      <h4>Additional Resources</h4>
+
+      <ul>
+        <%= content_tag :li, link_to('www.collegeanswer.com', 'https://www.salliemae.com/plan-for-college/', target:'_blank') %>
+        <%= content_tag :li, link_to('www.fastweb.com', 'http://www.fastweb.com', target:'_blank') %>
+        <%= content_tag :li, link_to('www.finaid.org', 'http://www.finaid.org', target:'_blank') %>
+        <%= content_tag :li, link_to('www.collegeanswer.com', 'https://studentaid.ed.gov/sa/', target:'_blank') %>
+      </ul>
+    </div>
 
   </div>
 
