--- a/app/views/layouts/site.html.erb
+++ b/app/views/layouts/site.html.erb
@@ -13,7 +13,7 @@
     <header class="navbar navbar-inverse hero" role="banner">
 
         <div class="container">
-            <%= render 'layouts/landing_header' %>
+            <%= render 'layouts/site_header' %>
         </div>
 
     </header>
@@ -23,7 +23,7 @@
     <footer id="footer-white">
 
         <div class="container">
-            <%= render 'layouts/landing_footer' %>
+            <%= render 'layouts/site_footer' %>
         </div>
 
     </footer>
