--- a/app/views/visits/_form.erb
+++ b/app/views/visits/_form.erb
@@ -58,7 +58,7 @@
     </div>
 
     <div class="submit">
-      <%= f.submit 'Request visit', class:'button button-small' %>
+      <%= f.submit 'Request free visit', class:'button button-small' %>
     </div>
 
 <% end %>
