--- a/app/views/site_pages/home.html.erb
+++ b/app/views/site_pages/home.html.erb
@@ -1,7 +1,19 @@
 <section id="hero">
+  <div class="container">
 
-  <%= render 'shared/hero' %>
+    <h1 class="hero-text animated fadeInDown">
+      Spend your first 16 months<br /> of college with us
+    </h1>
 
+    <div class="cta animated fadeInDown">
+      <%= link_to 'Request a free visit', new_visit_path, class:'button button-outline' %>
+
+      <%= link_to 'Apply now', admissions_apply_now_path, class:'button' %>
+    </div>
+
+    <%= content_tag :figure, nil, class:'img' %>
+
+   </div>
 </section>
 
 <section id="features">
