added hero section to CC page.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -32,6 +32,7 @@
 /* pages */
 @import 'partials/pages/coming_soon';
 @import 'partials/pages/index';
+@import 'partials/pages/index4';
 @import 'partials/pages/aboutus';
 @import 'partials/pages/features';
 @import 'partials/pages/blogpost';
