improved academic tabs,

--- a/app/views/site_pages/academics.html.erb
+++ b/app/views/site_pages/academics.html.erb
@@ -45,8 +45,8 @@
               <h4>Progress through the college core <strong><i>Sequentially</i></strong></h4>
               <p>Study the liberal arts one subject at a time in the flow of the biblical narrative.</p>
               <ul>
-                <li>Enhance academic performance</li>
-                <li>Generate a love for learning</li>
+                <li>Walk incrementally through the great sciences</li>
+                <li>Mature in your love for learning</li>
                 <li>Reveal the unity of knowledge</li>
               </ul>
               <%= content_tag :p, academics_read_more_link('sequentially') %>
@@ -94,8 +94,8 @@
               <p>Learn a critical thinking method and apply it every day to every subject and assignment.</p>
               <ul>
                 <li>Learn how to learn</li>
-                <li>Generate a cultural critic</li>
-                <li>Transform from a passive think to a master thinker</li>
+                <li>Learn arguments visually</li>
+                <li>Read, comprehend, and write culture</li>
               </ul>
               <%= content_tag :p, academics_read_more_link('critically') %>
             </div>
@@ -113,6 +113,7 @@
               <p>Learn from the greatest minds who ever lived.</p>
               <ul>
                 <li>Study under the original authors of the 'Great Books'</li>
+                <li>Prolonged exposure to the ‘Great Minds’</li>
                 <li>Have a little genius rub off on you</li>
               </ul>
               <%= content_tag :p, academics_read_more_link('classically') %>
@@ -124,9 +125,9 @@
               <h4>Discuss the college core <strong><i>Socratically</i></strong></h4>
               <p>Question and discuss subjects instead of listening to lectures.</p>
               <ul>
-                <li>Become an active learner</li>
+                <li>Learn to love your neighbor</li>
                 <li>Improve the art of listening</li>
-                <li>Improve your retention</li>
+                <li>Grow in the art of discussion</li>
               </ul>
               <%= content_tag :p, academics_read_more_link('socratically') %>
             </div>
