first draft of CC landing page complete.  need images.

--- a/app/views/site_pages/home.html.erb
+++ b/app/views/site_pages/home.html.erb
@@ -17,27 +17,35 @@
 </section>
 
 <section id="features">
+  <div class="container">
 
-  <%= render 'shared/features' %>
+    <%= render 'shared/features' %>
 
+  </div>
 </section>
 
 <section id="pricing">
+  <div class="container">
 
-  <%= render 'shared/reasons' %>
+    <%= render 'shared/reasons' %>
 
+  </div>
 </section>
 
 <section id="slider">
+  <div class="container">
 
-  <%= render 'shared/travel' %>
+    <%= render 'shared/travel' %>
 
+  </div>
 </section>
 
 <section id="testimonials">
+  <div class="container">
 
-  <%= render 'shared/testimonials' %>
+    <%= render 'shared/testimonials' %>
 
+  </div>
 </section>
 
 <section id="cta">
@@ -46,7 +54,9 @@
 </section>
 
 <section id="clients">
+  <div class="container">
 
-  <%= render 'shared/partners' %>
+    <%= render 'shared/partners' %>
 
+  </div>
 </section>
