--- a/app/views/site_pages/sequentially.html.erb
+++ b/app/views/site_pages/sequentially.html.erb
@@ -58,7 +58,7 @@
             Study one subject at a time in a sequence that follows the flow of the biblical narrative. The Rivendell
             programs academic semesters, illustrated below, are listed in the order students study them.
 
-
+            <%= image_tag 'our_method.jpg', class:'img-responsive' %>
           </p>
 
           <p>
