activated events resource.

--- a/app/views/events/_event.erb
+++ b/app/views/events/_event.erb
@@ -11,7 +11,7 @@
 
     <div class="col-md-6 description">
 
-      <p><strong>Description:  </strong><%= sanitize(event.description) %></p>
+      <p><strong>Summary:  </strong><%= sanitize(event.summary) %></p>
 
       <p><strong>Date:  </strong><%= event.date %></p>
 
