--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,2 +1,66 @@
-<h1>Events#show</h1>
-<p>Find me in app/views/events/show.html.erb</p>
+<section id="showcase">
+  <div class="container">
+
+    <div class="row">
+      <div class="col-md-12">
+
+        <div class="project">
+          <%= content_tag :h1, @event.name %>
+
+          <div class="col-md-7 screens">
+            <%= cl_image_tag @event.photo, class:'img-responsive', alt:"#{@event.speaker} photogragh" %>
+
+            <%= content_tag :p, @event.bio, class:'text' %>
+          </div>
+
+          <div class="col-md-4 col-md-offset-1 description">
+            <div class="info">
+
+              <div class="icons">
+                <%= icon 'calendar-o' %>
+                <%= icon 'clock-o' %>
+                <%= icon 'building-o' %>
+              </div>
+
+              <p>
+                <strong>Speaker:</strong>
+                <%= @event.speaker %>
+              </p>
+
+              <p>
+                <strong>Date:</strong>
+                <%= @event.date %>
+              </p>
+
+              <p>
+                <strong>Time:</strong>
+                <%= @event.time %>
+              </p>
+
+              <p>
+                <strong>Venue:</strong>
+                <%= @event.venue %>
+              </p>
+
+              <p>
+                <strong>Address:</strong><br />
+                <%= @event.address1 %>
+                <% if @event.address2 %>
+                    <%= @event.address2 %>
+                    <br />
+                <% end %>
+                <%= @event.city %>, <%= @event.state %>  <%= @event.zip_code %>
+              </p>
+
+              <%= link_to 'View all events', events_path %>
+
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+
+  </div>
+</section>
