--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -37,6 +37,7 @@
 @import 'partials/pages/features';
 @import 'partials/pages/blogpost';
 @import 'partials/pages/portfolio';
+@import 'partials/pages/portfolio_item';
 @import 'partials/pages/gallery';
 @import 'partials/pages/contactus';
 @import 'partials/pages/signup';
