made events resource navigable in main footer.

--- a/app/views/layouts/_large_footer.erb
+++ b/app/views/layouts/_large_footer.erb
@@ -12,6 +12,7 @@
             Sequenced Modular Curriculum<sup><small>TM</small></sup>
         <% end %>
       </li>
+      <%= content_tag :li, link_to('Rivendell Lecture Series', events_path) %>
     </ul>
 
   </div>
