--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -24,31 +24,33 @@
 
               <p>
                 <strong>Speaker:</strong>
+
                 <%= @event.speaker %>
               </p>
 
               <p>
                 <strong>Date:</strong>
+
                 <%= @event.date %>
               </p>
 
               <p>
                 <strong>Time:</strong>
+
                 <%= @event.time %>
               </p>
 
               <p>
                 <strong>Venue:</strong>
+
                 <%= @event.venue %>
               </p>
 
               <p>
                 <strong>Address:</strong><br />
-                <%= @event.address1 %>
-                <% if @event.address2 %>
-                    <%= @event.address2 %>
-                    <br />
-                <% end %>
+
+                <%= address_for(@event) %><br />
+
                 <%= @event.city %>, <%= @event.state %>  <%= @event.zip_code %>
               </p>
 
