--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -10,7 +10,9 @@
           <div class="col-md-7 screens">
             <%= cl_image_tag @event.photo, class:'img-responsive', alt:"#{@event.speaker} photogragh" %>
 
-            <%= content_tag :p, @event.bio, class:'text' %>
+            <div class="text">
+                <%= sanitize(@event.bio) %>
+            </div>
           </div>
 
           <div class="col-md-4 col-md-offset-1 description">
