added special_requests field to visit resource.

--- a/app/views/visits/_form.erb
+++ b/app/views/visits/_form.erb
@@ -57,6 +57,11 @@
       <%= f.text_field :airport, class:'form-control' %>
     </div>
 
+    <div class="form-group">
+      <%= f.label :special_requests %>
+      <%= f.text_area :special_requests, class:'form-control' %>
+    </div>
+
     <div class="submit">
       <%= f.submit 'Request free visit', class:'button button-small' %>
     </div>
