--- a/app/views/visits/new.html.erb
+++ b/app/views/visits/new.html.erb
@@ -9,12 +9,20 @@
 
     <div class="row">
       <div class="col-md-7 message">
-
         <h3>We're so confident you'll enroll with us, we'll fly you here for free!</h3>
 
         <p>
           We are pleased you have chosen to visit our campus.  <strong>Over 70% of our visitors enroll in our program.</strong>
           Complete the form below to get a taste of what our groundbreaking college-core program is all about.
+        </p>
+
+        <p>
+          Campus visits can happen on any Monday, Wednesday or Friday throughout our calendar year (as long as our offices are open).
+          We like to have you arrive the night before and catch a return flight late afternoon the following day.
+          If you have any questions or special requests, please use the <em>special requests</em> field below.
+          We will do our best to accommodate you. An admissions counselor will contact you with a sample itinerary and
+          more details before booking a final flight.  We are so excited to have you visit our campus.
+          It is a joy sharing this program with you!
         </p>
 
         <%= render 'form' %>
