--- a/app/views/site_pages/student_life.html.erb
+++ b/app/views/site_pages/student_life.html.erb
@@ -1,5 +1,3 @@
-
-
 <section id="first-option">
   <div class="container">
 
@@ -19,7 +17,7 @@
         </p>
       </div>
       <figure class="col-md-6 image">
-        <%= image_tag 'student_life/cultural_events.jpg', class:'img-responsive img-rounded', alt:'life skills education image' %>
+        <%= image_tag 'student_life/traditional_classroom.jpg', size:'359x322', class:'img-responsive img-rounded', alt:'Traditional classroom image' %>
       </figure>
     </div>
 
@@ -49,7 +47,6 @@
       <figure class="col-md-6 image">
         <%= image_tag 'student_life/amenities.jpg', class:'img-responsive img-rounded', alt:'holy healthy living image' %>
       </figure>
-
     </div>
 
     <div class="row feature backwards">
@@ -76,9 +73,9 @@
       <figure class="col-md-6 image">
         <%= image_tag 'student_life/amenities.jpg', class:'img-responsive img-rounded', alt:'holy healthy living image' %>
       </figure>
-
     </div>
 
+  </div>
 </section>
 
 <section id="cta">
