Added pictures for Student Life page

--- a/app/views/site_pages/student_life.html.erb
+++ b/app/views/site_pages/student_life.html.erb
@@ -1,11 +1,11 @@
 <section id="first-option">
   <div class="container">
 
-    <div class="row header">
+    <div class="row header student-life-header">
       <div class="col-md-12">
         <h2>Student Life: Reinventing the Classroom</h2>
         <p>Our classrooms are dynamic because you are dynamic.  We shape our learning spaces to encourage your formation as a <em>whole person.</em>  Get outside the four walls of your monotonous classroom; enough with rectilinear rows and the back of people’s heads — at Rivendell, our faculty show no fear when it comes to practicing creativity within the classroom.</p>
-        <p>You ask why?  We understand that we are educating a person, not merely a brain.  Therefore, we educate you to live a lifestyle that encapsulates more than just schoolwork.  Below, you will see a number of categories that we consider ‘our classroom.’   Studies have shown that focus, retention, creativity, and student grades skyrocket when the monotony of ineffective learning styles are discarded. We can attest to the power of this holistic approach.  Eager learners, creative problem solvers, and students of honor are produced in dynamic, integrated classrooms.  Once again, education can regain its soul.</p>
+        <p>You ask why?  We understand that we are educating a person, not merely a brain.  Therefore, we educate you to live a lifestyle that encapsulates more than just schoolwork.  Below, you will see a number of categories that we consider ‘our classroom.’   Studies have shown that focus, retention, creativity, and student grades skyrocket when the monotony of ineffective learning styles are discarded. We can attest to the power of this holistic approach.  Eager learners, creative problem solvers, and students of honor are produced in dynamic, integrated classrooms.  Once again, education regains its soul.</p>
       </div>
     </div>
 
@@ -13,7 +13,7 @@
       <div class="col-md-6 info">
         <h4>Traditional Classroom:</h4>
         <p>
-          In what many call our “traditional” classroom time, we are not so traditional.  For centuries, our educational system has been stuck on a classroom model developed during the industrial revolution.  Students are products to grasp, retain, and regurgitate, and repeat.  In our classrooms, we encourage a graduate style of learning that involves discussion, analysis, synthesis, and evaluation.  We might take class to coffee shops, forest trials, or a retreat cabin in the woods.  If we stay in the classroom, we encourage face to face interaction amidst the whole class with our “socratic circle” model complete with couches, barcaloungers, desks, and a coffee bar.
+          In what many call our “traditional” classroom, we are not so traditional.  For centuries, our pedagogies have been stuck on a classroom model developed during the industrial revolution.  Students are products to grasp, retain, regurgitate, and repeat.  In our classrooms, we encourage a graduate style of learning that involves discussion, analysis, synthesis, and evaluation.  We might take class to coffee shops, forest trials, or a retreat cabin in the woods.  If we stay in the classroom, we encourage face to face interaction amidst the whole class with our “socratic circle” model complete with couches, barcaloungers, desks, and a coffee bar.
         </p>
       </div>
       <figure class="col-md-6 image">
@@ -31,7 +31,7 @@
         <p> <em>“We must remember that intelligence is not enough. Intelligence plus character--that is the goal of true education.”  ~MLK </em> </p>
       </div>
       <figure class="col-md-6 image">
-        <%= image_tag 'student_life/health_fitness.jpg', class:'img-responsive img-rounded', alt:'holy healthy living image' %>
+        <%= image_tag 'student_life/Community_service.jpg', class:'img-responsive img-rounded', alt:'holy healthy living image' %>
       </figure>
     </div>
 
@@ -45,7 +45,7 @@
         </em></p>
       </div>
       <figure class="col-md-6 image">
-        <%= image_tag 'student_life/amenities.jpg', class:'img-responsive img-rounded', alt:'holy healthy living image' %>
+        <%= image_tag 'student_life/Spiritual-prayer.jpg', class:'img-responsive img-rounded', alt:'holy healthy living image' %>
       </figure>
     </div>
 
@@ -59,7 +59,7 @@
         <p> <em>“We do not want merely to see beauty... we want something else which can hardly be put into words- to be united with the beauty we see, to pass into it, to receive it into ourselves, to bathe in it, to become part of it…” C.S. Lewis </em> </p>
       </div>
       <figure class="col-md-6 image">
-        <%= image_tag 'student_life/cultural_events.jpg', class:'img-responsive img-rounded', alt:'life skills education image' %>
+        <%= image_tag 'student_life/Culturalevent.jpg', class:'img-responsive img-rounded', alt:'life skills education image' %>
       </figure>
     </div>
 
@@ -71,7 +71,7 @@
         </p>
       </div>
       <figure class="col-md-6 image">
-        <%= image_tag 'student_life/amenities.jpg', class:'img-responsive img-rounded', alt:'holy healthy living image' %>
+        <%= image_tag 'student_life/Holy_Healthy.jpg', class:'img-responsive img-rounded', alt:'holy healthy living image' %>
       </figure>
     </div>
 
