changed WE link.

--- a/app/views/site_pages/announcement.html.erb
+++ b/app/views/site_pages/announcement.html.erb
@@ -32,7 +32,7 @@
         relationships with educational institutions which use its innovative methods, books, software
         and/or complete curricula. To locate the institutions which use the cohort model, their
         Critical Thinking Methods & Software and Coram Deo Classical Series, please visit:
-        <%= link_to 'Worldview Education Company', 'http://www.worldview.education', target:'_blank' %>.
+        <%= link_to 'Worldview Education Company', 'http://www.worldview.education/?page_id=30', target:'_blank' %>.
       </p>
 
     </div>
